--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background : #4c516d;
     color : black;
 	font-family: 'Jura', sans-serif;
+	font-size: 26px;
 }
 
 .hidden {
@@ -58,6 +59,9 @@ header {
 }
 
 @media only screen and (min-width: 768px) {
+	body {
+		font-size: 18px;
+	}
     .frameWidth {
 		width: 1100px;
 		height: 800px;
