--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     background : #4c516d;
     color : black;
 	font-family: 'Jura', sans-serif;
-	font-size: 26px;
+	font-size: 36px;
 }
 
 .hidden {
@@ -57,6 +57,11 @@ header {
 .centerText {
 	text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+	body {
+		font-size: 36px;
+	}
 
 @media only screen and (min-width: 600px) {
 	body {
