--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
     background : #4c516d;
     color : black;
 	font-family: 'Jura', sans-serif;
-	font-size: 36px;
+	
 }
 
 .hidden {
@@ -58,17 +58,6 @@ header {
 	text-align: center;
 }
 
-@media only screen and (max-width: 600px) {
-	body {
-		font-size: 36px;
-	}
-
-@media only screen and (min-width: 600px) {
-	body {
-		font-size: 18px;
-	}
-    .frameWidth {
-		width: 1100px;
-		height: 800px;
-	}
+.col-lg-* {
+	font-size: 35px;
 }
